@@ -85,8 +85,17 @@ confflags += --disable-oracle
 # librouteros is required for the routeros plugin.
 confflags += --disable-routeros
 
+# libsigrok >= 0.2.0 is required for the sigrok plugin
+confflags += --disable-sigrok
+
+# linux-libc-dev >= 3.13 is required for the turbostat plugin.
+confflags += --disable-turbostat
+
 # libmongoc is required for the write_mongodb plugin.
 confflags += --disable-write_mongodb
+
+# librdkafka is required for the write_kafka plugin.
+confflags += --disable-write_kafka
 
 # xmms1 is required for the xmms plugin.
 confflags += --disable-xmms
